fix: body overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -26,7 +26,7 @@ body,
 		@apply transition-all ease-in-out duration-300;
 	}
 	body {
-		@apply font-[var(--font-family)] overflow-hidden;
+		@apply font-[var(--font-family)] overflow-x-hidden;
 	}
 	a {
 		color: inherit;
